--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,12 +8,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button 2"
+        android:background="@drawable/bg_btn2"
+        />
+
+    <Button
+        android:id="@+id/button_4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button 4"
+        android:textColor="#ffffff"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_btn4"
         />
     <TextView
         android:id="@+id/name_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:text="@string/screen2"
         android:textSize="11pt" />
 
