--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -7,5 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button 1"
+        android:background="@drawable/bg_btn4"
         />
 </LinearLayout>
