--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -1,76 +1,90 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <!--ScrollView horizontalScrollView 里面的子元素只能有一个，所以嵌套一个LinearLayout-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/button_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button 3"
+            />
 
-    <Button
-        android:id="@+id/button_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button 3"
-        />
+        <Button
+            android:id="@+id/button_5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="向上个活动传值"
+            android:background="@drawable/bg_btn3"
+            android:layout_marginTop="10dp"
+            />
+        <Button
+            android:id="@+id/button_6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EditText"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
 
-    <Button
-        android:id="@+id/button_5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="向上个活动传值"
-        android:background="@drawable/bg_btn3"
-        android:layout_marginTop="10dp"
-        />
-    <Button
-        android:id="@+id/button_6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="EditText"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_btn4"
-        />
-
-    <Button
-        android:id="@+id/button_radio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RadioButton"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_btn4"
-        />
-    <Button
-        android:id="@+id/button_checkBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="CheckBox"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_btn4"
-        />
-    <Button
-        android:id="@+id/button_imageview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ImageView"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_btn4"
-        />
-    <Button
-        android:id="@+id/button_listview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="ListView"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_btn4"
-        />
-    <Button
-        android:id="@+id/button_gridview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="GridView"
-        android:textColor="#ffffff"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_btn4"
-        />
-</LinearLayout>
+        <Button
+            android:id="@+id/button_radio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RadioButton"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
+        <Button
+            android:id="@+id/button_checkBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CheckBox"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
+        <Button
+            android:id="@+id/button_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ImageView"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
+        <Button
+            android:id="@+id/button_listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ListView"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
+        <Button
+            android:id="@+id/button_gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GridView"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
+        <Button
+            android:id="@+id/button_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RecyclerView"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
+    </LinearLayout>
+</ScrollView>
