--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -95,5 +95,14 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_btn4"
             />
+        <Button
+            android:id="@+id/button_Toast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Toast"
+            android:textColor="#ffffff"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
     </LinearLayout>
 </ScrollView>
