--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -10,5 +10,5 @@
         android:layout_height="wrap_content"
         android:divider="@color/colorPrimary"
         android:dividerHeight="2dp"
-        android:listSelector="@drawable/list_item_selector"></ListView>
+        android:listSelector="@drawable/list_item_selector"/>
 </LinearLayout>
