跳转传值复习

--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -15,6 +15,12 @@
             />
 
         <Button
+            android:id="@+id/button_jump"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="跳转传值"
+            />
+        <Button
             android:id="@+id/button_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
