--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -3,14 +3,18 @@
    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_changeFg"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="更换Fragment"/>
+
+    <TextView
+        android:id="@+id/tv_container_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/colorBlack"
+        android:text="Hello"
+       />
     <FrameLayout
         android:id="@+id/fl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/btn_changeFg"/>
+        android:layout_below="@+id/tv_container_title"/>
 </RelativeLayout>
