--- a/app/src/main/res/layout/fragement_a.xml
+++ b/app/src/main/res/layout/fragement_a.xml
@@ -3,6 +3,26 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
+
+    <Button
+        android:id="@+id/btn_message"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="给Activity传递消息"
+        android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/btn_changeFg"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="更换为BFragment"
+        android:textAllCaps="false"/>
+
+    <Button
+        android:id="@+id/btn_reSet"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="更换TextView内容"
+        android:textAllCaps="false"/>
     <TextView
         android:id="@+id/tv_fga_title"
         android:layout_width="match_parent"
