--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,15 +7,24 @@
         android:id="@+id/button_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button 2"
+        android:text="打开百度"
         android:background="@drawable/bg_btn2"
         />
 
     <Button
-        android:id="@+id/button_4"
+        android:id="@+id/button_ui"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button 4"
+        android:text="UI"
+        android:textColor="#ffffff"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_btn4"
+        />
+    <Button
+        android:id="@+id/button_ev"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="事件机制"
         android:textColor="#ffffff"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_btn4"
