回调事件的处理机制

--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -11,4 +11,10 @@
         android:text="click me"
         android:textAllCaps="false"
         android:onClick="ClickShow"/>
+    <com.example.myapplication.MyButton
+        android:id="@+id/btn_myButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="my button"
+        android:textAllCaps="false" />
 </LinearLayout>
