--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:text="my button"
         android:textAllCaps="false" />
+    <Button
+        android:id="@+id/btn_handler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Handler"
+        android:textAllCaps="false" />
 </LinearLayout>
