--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -155,5 +155,15 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_btn4"
             />
+        <Button
+            android:id="@+id/button_imageLoad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Universal-Image-Loader"
+            android:textColor="#ffffff"
+            android:textAllCaps="false"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
     </LinearLayout>
 </ScrollView>
