EventBus之基本用法1

--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -175,5 +175,25 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_btn4"
             />
+        <Button
+            android:id="@+id/button_EventBus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EventBus 事件分发"
+            android:textColor="#ffffff"
+            android:textAllCaps="false"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
+        <Button
+            android:id="@+id/button_EventBus2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EventBus 事件分发 Fragment"
+            android:textColor="#ffffff"
+            android:textAllCaps="false"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/bg_btn4"
+            />
     </LinearLayout>
 </ScrollView>
