--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -38,6 +38,15 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_btn4"
         />
+    <Button
+        android:id="@+id/button_okhttp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="http网络通信"
+        android:textColor="#ffffff"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_btn4"
+        />
     <TextView
         android:id="@+id/name_first"
         android:layout_width="wrap_content"
