--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -67,6 +67,16 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_btn4"
         />
+    <Button
+        android:id="@+id/button_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="多线程服务"
+        android:textColor="#ffffff"
+        android:textAllCaps="false"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_btn4"
+        />
     <TextView
         android:id="@+id/name_first"
         android:layout_width="wrap_content"
@@ -75,5 +85,6 @@
         android:layout_marginTop="20dp"
         android:text="@string/screen2"
         android:textSize="11pt" />
+
 
 </LinearLayout>
