--- a/app/src/main/res/layout/activity_thread.xml
+++ b/app/src/main/res/layout/activity_thread.xml
@@ -29,7 +29,8 @@
         android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我加载"/>
+        android:textAllCaps="false"
+        android:text="点我加载AsyncTask"/>
 
     <TextView
         android:id="@+id/async_text"
