--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -9,4 +9,12 @@
         android:text="Button 1"
         android:background="@drawable/bg_btn4"
         />
+    <Button
+        android:id="@+id/button_rxjava"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="RxJava"
+        android:background="@drawable/bg_btn4"
+        />
 </LinearLayout>
